[gd_scene load_steps=38 format=3 uid="uid://db8rs4npdygvb"]

[ext_resource type="Script" path="res://scripts/enemio_1.gd" id="1_bbk7c"]
[ext_resource type="Texture2D" uid="uid://of6dkmpfrpyh" path="res://art/Enemy/1/Walk.png" id="2_eanq1"]
[ext_resource type="Shader" path="res://art/Elite.gdshader" id="2_mju7y"]
[ext_resource type="Texture2D" uid="uid://dgepdwjg0m71p" path="res://art/Enemy/1/Hit.png" id="2_ovjcv"]
[ext_resource type="Texture2D" uid="uid://dlmju1i54deds" path="res://art/Enemy/1/Death.png" id="3_awpyq"]
[ext_resource type="Texture2D" uid="uid://m7ib0bg8260y" path="res://art/Player/LargeShadow.png" id="3_kiorn"]
[ext_resource type="PackedScene" uid="uid://8mk0il1s3w4j" path="res://scenes/hurt_box.tscn" id="4_s661r"]
[ext_resource type="PackedScene" uid="uid://dpg8igdyy7wcb" path="res://scenes/hitBox.tscn" id="5_essxv"]
[ext_resource type="AudioStream" uid="uid://c32x000ql6st6" path="res://art/Sounds/enemyDeath.wav" id="9_ltryg"]
[ext_resource type="AudioStream" uid="uid://byxovgf53gtq" path="res://art/Sounds/enemyHurt.wav" id="10_t8p1n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v2sa2"]
shader = ExtResource("2_mju7y")

[sub_resource type="AtlasTexture" id="AtlasTexture_shln4"]
atlas = ExtResource("2_ovjcv")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuumr"]
atlas = ExtResource("2_ovjcv")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlmvp"]
atlas = ExtResource("2_ovjcv")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovm3d"]
atlas = ExtResource("2_ovjcv")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv4nj"]
atlas = ExtResource("3_awpyq")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_whtbp"]
atlas = ExtResource("3_awpyq")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaeid"]
atlas = ExtResource("3_awpyq")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_60o35"]
atlas = ExtResource("3_awpyq")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3uvv"]
atlas = ExtResource("3_awpyq")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjdwv"]
atlas = ExtResource("3_awpyq")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqy57"]
atlas = ExtResource("3_awpyq")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1asb"]
atlas = ExtResource("3_awpyq")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c62x"]
atlas = ExtResource("2_eanq1")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbauo"]
atlas = ExtResource("2_eanq1")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1klef"]
atlas = ExtResource("2_eanq1")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ulhn"]
atlas = ExtResource("2_eanq1")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x7v2"]
atlas = ExtResource("2_eanq1")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aybbq"]
atlas = ExtResource("2_eanq1")
region = Rect2(400, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_c7esf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shln4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuumr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlmvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovm3d")
}],
"loop": false,
"name": &"Damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv4nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whtbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaeid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60o35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3uvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjdwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqy57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1asb")
}],
"loop": false,
"name": &"Death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c62x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbauo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1klef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ulhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x7v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aybbq")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ia4ty"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odrrd"]
size = Vector2(35, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0isas"]
size = Vector2(33, 20)

[sub_resource type="Animation" id="Animation_1lknm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_05dt8"]
resource_name = "elite"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7rd7q"]
resource_name = "notElite"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1mvci"]
_data = {
"RESET": SubResource("Animation_1lknm"),
"elite": SubResource("Animation_05dt8"),
"notElite": SubResource("Animation_7rd7q")
}

[node name="Micronde" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_bbk7c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_v2sa2")
sprite_frames = SubResource("SpriteFrames_c7esf")
autoplay = "default"
flip_h = true

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
show_behind_parent = true
position = Vector2(3, 18)
texture = ExtResource("3_kiorn")
offset = Vector2(-6, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 7)
rotation = -1.59971
shape = SubResource("CircleShape2D_ia4ty")

[node name="HurtBox" parent="." instance=ExtResource("4_s661r")]
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2.5, 7)
shape = SubResource("RectangleShape2D_odrrd")

[node name="hitBox" parent="." instance=ExtResource("5_essxv")]
collision_layer = 2
damage = 10

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2(2.5, 7)
shape = SubResource("RectangleShape2D_0isas")
debug_color = Color(0.825244, 0.00160545, 0.955459, 0.42)

[node name="DamageNumberOrigin" type="Node2D" parent="."]
position = Vector2(0, -5)

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1mvci")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ltryg")

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_t8p1n")
max_distance = 500.0

[node name="HideTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HideTimer" to="." method="_on_timer_2_timeout"]

[editable path="HurtBox"]
[editable path="hitBox"]
